<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_edit_view"
            android:hint="@string/name_hint"
            android:layout_marginTop="16dp"/>
        <TextView

            android:text="@string/toppings"
            style="@style/HeaderTextStyle"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings_1"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:id="@+id/whipped_cream_checkbox"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings_2"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:id="@+id/chocolate_checkbox"/>
        <TextView
            android:text="@string/quantity"
            android:textAllCaps="true"
            style="@style/HeaderTextStyle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/button_decrease"
                android:onClick="decrement"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_quantity"
                android:textSize="16sp"
                android:id="@+id/quantity_text_view"
                android:textColor="@android:color/black"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/button_increase"
                android:onClick="increment"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_order"
            android:onClick="submitOrder"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>